--- a/src/Locales/en.json
+++ b/src/Locales/en.json
@@ -21,5 +21,56 @@
         "HTML / CSS / PHP",
         "Sass / TailwindCSS",
         "Git / GitHub"
-    ]
+    ],
+    "courses": {
+        "pageTitle": "My Journey",
+        "course1": {
+            "subsection1": {
+                "title": "Bac STI2D - SIN Option",
+                "period": "2016 - 2019",
+                "description": "Introduction to the basics of programming with <strong>Arduino and ESP32 boards</strong>, small Python projects, and an introduction to <strong>HTML / CSS</strong>.",
+                "location": "Lycée Jean Guéhenno, Fougères"
+            }
+        },
+        "course2": {
+            "subsection1": {
+                "title": "BTS SIO - SLAM Option",
+                "period": "2019 - 2021",
+                "description": "Learning <strong>JavaScript, AJAX, PHP, Java, C#, HTML, CSS, Symfony, SQL</strong>. Development of Symfony projects:<ul class=\"list-disc ml-5 mt-2\"><li>Electric Mobility - e-commerce for hoverboards, electric bikes, scooters (everything except the final payment)</li><li>Ciel Bijou - e-commerce for selling jewelry</li></ul>",
+                "location": "Lycée Douanier Rousseau, Laval"
+            }
+        },
+        "course3": {
+            "subsection1": {
+                "title": "Internship at Diluz (4 weeks)",
+                "period": "2020",
+                "description": "Creation of 3 pages on an internal business site (accounting) to visualize maximum information about the files. <br/> Technologies: Vue.js / Nuxt / Node.js / Sequelize / PostgreSQL",
+                "location": "Chantepie"
+            }
+        },
+        "course4": {
+            "subsection1": {
+                "title": "Internship at Diluz (8 weeks)",
+                "period": "2021",
+                "description": "Redesign of the intranet to make it more interactive and modernize the design. Later participation in the ticketing of the internal accounting application <strong>Talenz Toaden</strong>. <br/> Technologies: Vue.js / Nuxt / Node.js / Sequelize / PostgreSQL",
+                "location": "Chantepie"
+            }
+        },
+        "course5": {
+            "subsection1": {
+                "title": "Bachelor's in Development",
+                "period": "2021 - 2023",
+                "description": "Work-study studies focused on frontend and backend development, web integration, and company projects. <br/> Ongoing project: <ul><li>Cyna - e-commerce developed in React / Vite / Sequelize / MySQL / Node.js</li></ul>",
+                "location": "SupDeVinci, Chantepie"
+            }
+        },
+        "course6": {
+            "subsection1": {
+                "title": "Work-Study - CNSI / S&D",
+                "period": "2023 - Present",
+                "description": "Contribution to the development of a <em>Warehouse Management System</em> for warehouses and an application for supplier order management. <br/> Technologies: Laravel / MySQL",
+                "location": "Plessé"
+            }
+        }
+    }
 }
