--- a/src/Locales/en.json
+++ b/src/Locales/en.json
@@ -18,6 +18,7 @@
         "MongoDB",
         "Go",
         "C#",
+        "Java",
         "HTML / CSS / PHP",
         "Sass / TailwindCSS",
         "Git / GitHub"
