--- a/src/Locales/fr.json
+++ b/src/Locales/fr.json
@@ -14,11 +14,13 @@
         "Laravel",
         "Symfony",
         "Node.js",
+        "Swift",
         "SQL (MySQL, PostgreSQL, etc.)",
         "MongoDB",
         "Go",
-        "C#",
+        "C# (.NET)",
         "Java",
+        "Flutter",
         "HTML / CSS / PHP",
         "Sass / TailwindCSS",
         "Git / GitHub"
