--- a/src/Locales/en.json
+++ b/src/Locales/en.json
@@ -1,10 +1,10 @@
 {
     "home": "Home",
     "projects": "Projects",
-    "course": "Course",
+    "course": "Journey",
     "skill": "Skills",
     "contact": "Contact",
-    "hero_presentation": "Student in the <strong>3rd year Bachelor program</strong> in work-study at <strong>SupDeVinci (Rennes)</strong>.<br>I contribute within <strong> CNSI - S&D </strong> to the development of a <em>Warehouse Management System</em> for warehouses, as well as a separate application for supplier order management.",
+    "hero_presentation": "Student in <strong>3rd year Bachelor's degree</strong> in work-study at <strong>SupDeVinci (Rennes)</strong>.<br>I contribute within <strong>CNSI - S&D</strong> to the development of a <em>Warehouse Management System</em> for warehouses, as well as a separate application for managing supplier-side orders.",
     "technologies": [
         "JavaScript",
         "TypeScript",
@@ -29,51 +29,93 @@
         "pageTitle": "My Journey",
         "course1": {
             "subsection1": {
-                "title": "Bac STI2D - SIN Option",
-                "period": "2016 - 2019",
-                "description": "Introduction to the basics of programming with <strong>Arduino and ESP32 boards</strong>, small Python projects, and an introduction to <strong>HTML / CSS</strong>.",
-                "location": "Lycée Jean Guéhenno, Fougères"
+            "title": "Baccalaureate STI2D - SIN Option",
+            "period": "2021 - 2023",
+            "description": "Discovery of programming fundamentals with <strong>Arduino and ESP32 boards</strong>, small Python projects and introduction to <strong>HTML / CSS</strong>.",
+            "location": "Jean Guéhenno High School, Fougères"
             }
         },
         "course2": {
             "subsection1": {
-                "title": "BTS SIO - SLAM Option",
-                "period": "2019 - 2021",
-                "description": "Learning <strong>JavaScript, AJAX, PHP, Java, C#, HTML, CSS, Symfony, SQL</strong>. Development of Symfony projects:<ul class=\"list-disc ml-5 mt-2\"><li>Electric Mobility - e-commerce for hoverboards, electric bikes, scooters (everything except the final payment)</li><li>Ciel Bijou - e-commerce for selling jewelry</li></ul>",
-                "location": "Lycée Douanier Rousseau, Laval"
+            "title": "BTS SIO - SLAM Option",
+            "period": "2023 - 2025",
+            "description": "Learning <strong>JavaScript, AJAX, PHP, Java, C#, HTML, CSS, Symfony, SQL</strong>. Completion of Symfony projects :<ul class=\"list-disc ml-5 mt-2\"><li>Electric Mobility - e-commerce for hoverboards, electric bikes, scooters (everything except final payment)</li><li>Ciel Bijou - jewelry sales e-commerce</li></ul>",
+            "location": "Douanier Rousseau High School, Laval"
             }
         },
         "course3": {
             "subsection1": {
-                "title": "Internship at Diluz (4 weeks)",
-                "period": "2020",
-                "description": "Creation of 3 pages on an internal business site (accounting) to visualize maximum information about the files. <br/> Technologies: Vue.js / Nuxt / Node.js / Sequelize / PostgreSQL",
-                "location": "Chantepie"
+            "title": "Internship at Diluz (4 weeks)",
+            "period": "2024",
+            "description": "Development of 3 pages on an internal business website (accounting) to display maximum information on files.  <br/> Technologies : Vue.js / Nuxt / Node.js / Sequelize / PostgreSQL",
+            "location": "Chantepie"
             }
         },
         "course4": {
             "subsection1": {
-                "title": "Internship at Diluz (8 weeks)",
-                "period": "2021",
-                "description": "Redesign of the intranet to make it more interactive and modernize the design. Later participation in the ticketing of the internal accounting application <strong>Talenz Toaden</strong>. <br/> Technologies: Vue.js / Nuxt / Node.js / Sequelize / PostgreSQL",
-                "location": "Chantepie"
+            "title": "Internship at Diluz (8 weeks)",
+            "period": "2025",
+            "description": "Redesign of the intranet to make it more interactive and modernize the design. Subsequently participated in ticketing of the internal accounting application <strong>Talenz Toaden</strong>. <br/> Technologies : Vue.js / Nuxt / Node.js / Sequelize / PostgreSQL",
+            "location": "Chantepie"
             }
         },
         "course5": {
             "subsection1": {
-                "title": "Bachelor's in Development",
-                "period": "2021 - 2023",
-                "description": "Work-study studies focused on frontend and backend development, web integration, and company projects. <br/> Ongoing project: <ul><li>Cyna - e-commerce developed in React / Vite / Sequelize / MySQL / Node.js</li></ul>",
-                "location": "SupDeVinci, Chantepie"
+            "title": "Bachelor's Degree in Development",
+            "period": "2025 - 2026",
+            "description": "Work-study education focused on frontend and backend development, web integration, and business projects. <br/> Current project : <ul><li>Cyna - e-commerce built with React / Vite / Sequelize / MySQL / Node.js</li></ul>",
+            "location": "SupDeVinci, Chantepie"
             }
         },
         "course6": {
             "subsection1": {
-                "title": "Work-Study - CNSI / S&D",
-                "period": "2023 - Present",
-                "description": "Contribution to the development of a <em>Warehouse Management System</em> for warehouses and an application for supplier order management. <br/> Technologies: Laravel / MySQL",
-                "location": "Plessé"
+            "title": "Work-Study - CNSI / S&D",
+            "period": "2025 - 2026",
+            "description": "Contributing to the development of a <em>Warehouse Management System</em> for warehouses and a supplier-side order management application. <br/> Technologies : Laravel / MySQL",
+            "location": "Plessé"
             }
+        }
+    },
+    "projectsList": {
+        "pokemon": {
+            "title": "Pokémon App",
+            "stack": "Swift · PokéAPI",
+            "description": "iOS Pokédex allowing you to view, search and explore details of each Pokémon.",
+            "features": [
+                "Complete list of Pokémon",
+                "Search by name",
+                "Detail page per Pokémon"
+            ]
+        },
+        "movie": {
+            "title": "Movie Streaming App",
+            "stack": "Swift · TMDB API · SQLite",
+            "description": "Streaming application with user management, favorites and local database.",
+            "features": [
+                "User authentication",
+                "Add movies to favorites",
+                "Local SQLite database"
+            ]
+        },
+        "training": {
+            "title": "Training App",
+            "stack": "Flutter · Node.js · Generative AI",
+            "description": "Muscle-focused training tracking application with role management and intelligent program generation.",
+            "features": [
+                "Admin / user roles",
+                "Training tracking & feedback",
+                "Automatic program generation via AI"
+            ]
+        },
+        "chess": {
+            "title": "Chess",
+            "stack": "Go · PostgreSQL · React · WebSockets",
+            "description": "Chess.com reproduction with authentication, real-time matchmaking and live multiplayer games.",
+            "features": [
+                "Login & registration",
+                "Real-time matchmaking",
+                "Play against other connected players"
+            ]
         }
     }
 }
