--- a/src/Locales/en.json
+++ b/src/Locales/en.json
@@ -13,6 +13,7 @@
         "Vue.js (Nuxt optional)",
         "React (Vite optional)",
         "Angular",
+        "Spring Boot",
         "Laravel",
         "Symfony",
         "Node.js",
