--- a/src/Locales/fr.json
+++ b/src/Locales/fr.json
@@ -13,6 +13,7 @@
         "Vue.js (Nuxt optionnel)",
         "React (Vite optionnel)",
         "Angular",
+        "Spring Boot",
         "Laravel",
         "Symfony",
         "Node.js",
